@@ -1,0 +1,3 @@
+thread-with-slots/main.cpp:20:1: warning: Slot MyThread::slot2 might not run in the expected thread [-Wclazy-thread-with-slots]
+thread-with-slots/main.cpp:23:1: warning: Slot MyThread::slot6 might not run in the expected thread [-Wclazy-thread-with-slots]
+thread-with-slots/main.cpp:16:5: warning: Slot MyThread::slot3 might not run in the expected thread [-Wclazy-thread-with-slots]
