@@ -34,6 +34,7 @@
     qcolor-from-literal
     strict-iterators
     connect-not-normalized
+    thread-with-slots
   - returning-data-from-temporary now checks for temporary QByteArrays casting to char* when returned
   - returning-data-from-temporary now checks for assignment too, not only return statements
   - unused-non-trivial-variable now warns for unused QList, QVector and many more types
